@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-       Copyright 2009-2023 the original author or authors.
+       Copyright 2009-2024 the original author or authors.
 
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
@@ -22,22 +22,20 @@
   <parent>
     <groupId>org.mybatis</groupId>
     <artifactId>mybatis-parent</artifactId>
-    <version>36</version>
+    <version>42</version>
     <relativePath />
   </parent>
 
+  <groupId>org.mybatis</groupId>
   <artifactId>mybatis</artifactId>
-  <version>3.5.11.5</version>
-  <packaging>jar</packaging>
+  <version>3.5.16-SNAPSHOT</version>
 
   <name>mybatis</name>
-  <description>
-    The MyBatis SQL mapper framework makes it easier to use a relational database with object-oriented
+  <description>The MyBatis SQL mapper framework makes it easier to use a relational database with object-oriented
     applications. MyBatis couples objects with stored procedures or SQL statements using a XML descriptor or
     annotations. Simplicity is the biggest advantage of the MyBatis data mapper over object relational mapping
-    tools.
-  </description>
-  <url>https://www.mybatis.org/mybatis-3</url>
+    tools.</description>
+  <url>https://www.mybatis.org/mybatis-3/</url>
 
   <inceptionYear>2009</inceptionYear>
 
@@ -109,10 +107,10 @@
   </contributors>
 
   <scm>
-    <url>https://github.com/mybatis/mybatis-3</url>
-    <connection>scm:git:ssh://github.com/mybatis/mybatis-3.git</connection>
+    <connection>scm:git:ssh://git@github.com/mybatis/mybatis-3.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/mybatis/mybatis-3.git</developerConnection>
-    <tag>mybatis-3.5.11</tag>
+    <tag>HEAD</tag>
+    <url>https://github.com/mybatis/mybatis-3</url>
   </scm>
   <issueManagement>
     <system>GitHub Issue Management</system>
@@ -124,64 +122,57 @@
   </ciManagement>
   <distributionManagement>
     <site>
-      <id>gh-pages</id>
+      <id>gh-pages-scm</id>
       <name>Mybatis GitHub Pages</name>
-      <url>git:ssh://git@github.com/mybatis/mybatis-3.git?gh-pages#</url>
+      <url>scm:git:ssh://git@github.com/mybatis/mybatis-3.git</url>
     </site>
   </distributionManagement>
 
   <properties>
     <clirr.comparisonVersion>3.4.6</clirr.comparisonVersion>
+
+    <byte-buddy.version>1.14.12</byte-buddy.version>
+    <derby.version>10.17.1.0</derby.version>
+    <log4j.version>2.23.1</log4j.version>
+    <mockito.version>5.11.0</mockito.version>
+    <mssql-jdbc.version>12.6.1.jre11</mssql-jdbc.version>
+    <testcontainers.version>1.19.7</testcontainers.version>
+
+    <!-- Add slow test groups here and annotate classes similar to @Tag('groupName'). -->
+    <!-- Excluded groups are ran on github ci, to force here, pass -d"excludedGroups=" -->
     <excludedGroups>TestcontainersTests</excludedGroups>
-    <maven.compiler.testCompilerArgument>-parameters</maven.compiler.testCompilerArgument>
+
+    <!-- Automatic Module Name -->
     <module.name>org.mybatis</module.name>
-    <osgi.export>org.apache.ibatis.*;version=${project.version};-noimport:=true</osgi.export>
+
+    <!-- OSGI Data -->
+    <osgi.export>org.apache.ibatis.*;version=${project.version};-noimport:=true,org.apache.ibatis.javassist.util.proxy;version=${project.version};-noimport:=true</osgi.export>
     <osgi.import>*;resolution:=optional</osgi.import>
     <osgi.dynamicImport>*</osgi.dynamicImport>
+
+    <!-- Spotbugs Setup -->
     <spotbugs.onlyAnalyze>org.apache.ibatis.*</spotbugs.onlyAnalyze>
-    <argLine>-Djdk.attach.allowAttachSelf -Xmx2048m</argLine>
+
+    <!-- Surefire Setup -->
+    <argLine>-Xmx2048m -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${byte-buddy.version}/byte-buddy-agent-${byte-buddy.version}.jar</argLine>
 
     <!-- Reproducible Builds -->
-    <project.build.outputTimestamp>1663532582</project.build.outputTimestamp>
+    <project.build.outputTimestamp>1702533513</project.build.outputTimestamp>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>ognl</groupId>
       <artifactId>ognl</artifactId>
-      <version>3.3.4</version>
+      <version>3.4.2</version>
       <scope>compile</scope>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.javassist</groupId>
       <artifactId>javassist</artifactId>
-      <version>3.29.2-GA</version>
+      <version>3.30.2-GA</version>
       <scope>compile</scope>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>2.0.1</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.reload4j</groupId>
-      <artifactId>reload4j</artifactId>
-      <version>1.2.22</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>2.19.0</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.2</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -195,55 +186,61 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.9.0</version>
+      <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
-      <version>5.9.0</version>
+      <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>2.6.1</version>
+      <version>2.7.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
-      <version>10.15.2.0</version>
+      <version>${derby.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derbyshared</artifactId>
-      <version>10.15.2.0</version>
+      <version>${derby.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derbyoptionaltools</artifactId>
-      <version>10.15.2.0</version>
+      <version>${derby.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>2.1.214</version>
+      <version>2.2.224</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>4.8.0</version>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-subclass</artifactId>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
-      <version>4.8.0</version>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -256,62 +253,102 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.5.0</version>
+      <version>42.7.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.30</version>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.3.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.23.1</version>
+      <version>3.25.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>eu.codearte.catch-exception</groupId>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+      <version>${byte-buddy.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy-agent</artifactId>
+      <version>${byte-buddy.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.hazendaz.catch-exception</groupId>
       <artifactId>catch-exception</artifactId>
-      <version>2.0</version>
+      <version>2.2.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>1.17.3</version>
+      <version>${testcontainers.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>postgresql</artifactId>
-      <version>1.17.3</version>
+      <version>${testcontainers.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>mysql</artifactId>
-      <version>1.17.3</version>
+      <version>${testcontainers.version}</version>
       <scope>test</scope>
     </dependency>
     <!-- For javadoc link -->
     <dependency>
       <groupId>com.microsoft.sqlserver</groupId>
       <artifactId>mssql-jdbc</artifactId>
-      <version>11.2.0.jre8</version>
+      <version>${mssql-jdbc.version}</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- Logging Support -->
+    <dependency>
+      <groupId>ch.qos.reload4j</groupId>
+      <artifactId>reload4j</artifactId>
+      <version>1.2.25</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.3.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>${log4j.version}</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.12</version>
+      <optional>true</optional>
+    </dependency>
+
+    <!-- Logging Support used in testing -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.4.1</version>
+      <version>1.5.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>2.19.0</version>
+      <version>${log4j.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -322,14 +359,20 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <testCompilerArgument>${maven.compiler.testCompilerArgument}</testCompilerArgument>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>net.bytebuddy</groupId>
+              <artifactId>byte-buddy-agent</artifactId>
+              <version>${byte-buddy.version}</version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <systemProperties>
+          <systemPropertyVariables>
             <property>
               <name>derby.stream.error.file</name>
               <value>${project.build.directory}/derby.log</value>
@@ -338,24 +381,27 @@
               <name>derby.system.home</name>
               <value>${project.build.directory}</value>
             </property>
-          </systemProperties>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
+      <!-- Do not run pdf plugin as not compliant with site 2.0
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pdf-plugin</artifactId>
       </plugin>
+      -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <executions>
           <execution>
-            <phase>package</phase>
             <goals>
               <goal>shade</goal>
             </goals>
+            <phase>package</phase>
             <configuration>
               <createDependencyReducedPom>false</createDependencyReducedPom>
+              <createSourcesJar>true</createSourcesJar>
               <artifactSet>
                 <includes>
                   <include>org.mybatis:mybatis</include>
@@ -363,6 +409,20 @@
                   <include>org.javassist:javassist</include>
                 </includes>
               </artifactSet>
+              <filters>
+                <filter>
+                  <artifact>ognl:ognl</artifact>
+                  <excludes>
+                    <exclude>META-INF/MANIFEST.MF</exclude>
+                  </excludes>
+                </filter>
+                <filter>
+                  <artifact>org.javassist:javassist</artifact>
+                  <excludes>
+                    <exclude>META-INF/MANIFEST.MF</exclude>
+                  </excludes>
+                </filter>
+              </filters>
               <relocations>
                 <relocation>
                   <pattern>ognl</pattern>
@@ -373,6 +433,7 @@
                   <shadedPattern>org.apache.ibatis.javassist</shadedPattern>
                 </relocation>
               </relocations>
+              <shadeSourcesContent>true</shadeSourcesContent>
             </configuration>
           </execution>
         </executions>
@@ -381,7 +442,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <configuration>
-          <locales>en,es,ja,fr,zh_CN,ko</locales>
+          <locales>default,es,ja,fr,zh_CN,ko</locales>
         </configuration>
       </plugin>
       <plugin>
@@ -399,22 +460,14 @@
 
   <profiles>
     <profile>
-      <!-- Run slow tests only on github ci, to force run otherwise use -D"env.GITHUB" -->
-      <id>github-ci</id>
+      <id>pre16</id>
       <activation>
-        <property>
-          <name>env.GITHUB</name>
-        </property>
+        <jdk>(,16)</jdk>
       </activation>
       <properties>
-        <excludedGroups />
+        <derby.version>10.15.2.0</derby.version>
+        <mssql-jdbc.version>12.4.2.jre8</mssql-jdbc.version>
       </properties>
-    </profile>
-    <profile>
-      <id>pre17</id>
-      <activation>
-        <jdk>(,17)</jdk>
-      </activation>
       <build>
         <pluginManagement>
           <plugins>
@@ -427,9 +480,31 @@
                 </testExcludes>
               </configuration>
             </plugin>
+            <plugin>
+              <groupId>net.revelc.code</groupId>
+              <artifactId>impsort-maven-plugin</artifactId>
+              <configuration>
+                <skip>true</skip>
+              </configuration>
+            </plugin>
           </plugins>
         </pluginManagement>
       </build>
+    </profile>
+    <profile>
+      <id>16</id>
+      <activation>
+        <jdk>[16,)</jdk>
+      </activation>
+      <properties>
+        <derby.version>10.15.2.0</derby.version>
+        <java.version>16</java.version>
+        <java.release.version>16</java.release.version>
+        <java.test.version>16</java.test.version>
+        <java.test.release.version>16</java.test.release.version>
+        <excludedGroups>TestcontainersTests,RequireIllegalAccess</excludedGroups>
+        <allowed.build.jdks>[11,12),[17,18),[21,22),[22,23),[23,24)</allowed.build.jdks>
+      </properties>
     </profile>
     <profile>
       <id>17</id>
@@ -437,12 +512,44 @@
         <jdk>[17,)</jdk>
       </activation>
       <properties>
-        <java.version>17</java.version>
-        <java.release.version>17</java.release.version>
-        <java.test.version>17</java.test.version>
-        <java.test.release.version>17</java.test.release.version>
-        <excludedGroups>TestcontainersTests,RequireIllegalAccess</excludedGroups>
+        <derby.version>10.16.1.1</derby.version>
       </properties>
+    </profile>
+    <profile>
+      <id>19</id>
+      <activation>
+        <jdk>[19,)</jdk>
+      </activation>
+      <properties>
+        <derby.version>10.17.1.0</derby.version>
+      </properties>
+    </profile>
+
+    <!-- We are manipulating the phase to run before package so shading will be used for building source jar
+         and further turning off attach here as shading will do that.  This is required for ognl and javassist
+         for IDE's usage -->
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-sources</id>
+                <goals>
+                  <goal>jar-no-fork</goal>
+                </goals>
+                <phase>prepare-package</phase>
+                <configuration>
+                  <attach>false</attach>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
